--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Stack+Sans+Headline:wght@200..700&display=swap" rel="stylesheet">
     <title>Sign Up Page</title>
 </head>
 <body>
@@ -30,7 +33,7 @@
                             </div>   
                         </div>
                         <div class="flex-row"> 
-                           <div class="form-input">
+                            <div class="form-input">
                                 <label for="email">Email</label>
                                 <input type="email" required placeholder="Email">
                             </div>
